--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wui",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,6 +9,31 @@
     "lib": "vue-cli-service build --target lib --name wui --dest lib packages/index.js"
     
   },
+  "description": "An Button",
+  "keywords": [
+    "component",
+    "components",
+    "design",
+    "framework",
+    "frontend",
+    "vue",
+    "vue-component",
+    "ui",
+    "Button"
+  ],
+  "homepage": "https://github.com/wangchuankai/wui",
+  "license": "MIT",
+
+  "bugs": {
+    "url": "https://github.com/wangchuankai/wui/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wangchuankai/wui.git"
+  },
+  "contributors": [
+    "wangchuankai"
+  ],
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
@@ -41,5 +66,6 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "main": "lib/wui.umd.min.js"
 }
